implemented user story 5, changed get/setgamesessionId to get/setID, wrote and changed a few tests