@@ -2,15 +2,19 @@ package at.fhtw.mse.awt.twentyone.repositories;
 
 import at.fhtw.mse.awt.twentyone.entities.Card;
 import at.fhtw.mse.awt.twentyone.entities.GameSession;
+import at.fhtw.mse.awt.twentyone.entities.Player; // Import Player
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.test.context.TestPropertySource;
+
 
 import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+@TestPropertySource(properties = "spring.sql.init.mode=never")
 @DataJpaTest
 class CardRepositoryTest {
 
@@ -20,10 +24,24 @@ class CardRepositoryTest {
     @Autowired
     private GameSessionRepository gameSessionRepository;
 
+    @Autowired // Add this
+    private PlayerRepository playerRepository;
+
     @Test
     void shouldReturnCardsByGameSessionId() {
+        // --- FIX: Step 1 - Create and save a Player first ---
+        Player player = new Player(null, "testplayer", "Test Player", "hash");
+        player = playerRepository.save(player);
+
+        // --- Original Code, with fixes applied ---
         GameSession session = new GameSession();
         session.setStartTime(LocalDateTime.now());
+
+        // --- FIX: Step 2 - Set the required fields on the session ---
+        session.setPlayer(player);
+        session.setStatus("ACTIVE");
+
+        // Now this save will succeed
         session = gameSessionRepository.save(session);
 
         Card card = new Card();
@@ -33,10 +51,12 @@ class CardRepositoryTest {
         card.setPosition(1);
         cardRepository.save(card);
 
-        List<Card> result = cardRepository.findByGameSession_GameSessionId(session.getGameSessionId());
+        // --- ACT ---
+        List<Card> result = cardRepository.findByGameSession_Id(session.getId());
 
+        // --- ASSERT ---
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().getRank()).isEqualTo("A");
-        assertThat(result.getFirst().getSuit()).isEqualTo("HEARTS");
+        assertThat(result.get(0).getRank()).isEqualTo("A"); // Using get(0) as you had
+        assertThat(result.get(0).getSuit()).isEqualTo("HEARTS");
     }
 }
